// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  active={false}
  buttonType="button"
  className="c-button"
  fluid={false}
  ghost={false}
  rounded={false}
  size={null}
  type="button"
>
  lorem ipsum dolor
</button>
`;

exports[`Button renders correctly a button with a type 1`] = `
<button
  active={false}
  buttonType="button"
  className="c-button c-button--success"
  fluid={false}
  ghost={false}
  rounded={false}
  size={null}
  type="button"
>
  lorem ipsum dolor
</button>
`;

exports[`Button renders correctly a ghost button 1`] = `
<button
  active={false}
  buttonType="button"
  className="c-button c-button--ghost"
  fluid={false}
  ghost={true}
  rounded={false}
  size={null}
  type="button"
>
  lorem ipsum dolor
</button>
`;

exports[`Button renders correctly a ghost button with a type 1`] = `
<button
  active={false}
  buttonType="button"
  className="c-button c-button--ghost-success"
  fluid={false}
  ghost={true}
  rounded={false}
  size={null}
  type="button"
>
  lorem ipsum dolor
</button>
`;
